# release-test

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
cliapp/: __main__.py  cli.py
tests/: test_console.py
