[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/anas-shakeel/release-test"

[project]
name = "cliapp"
version = "1.1.0"
description = "Simple cli app to test releases"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Anas Shakeel", email = "srdranas456@gmail.com" }
]
requires-python = ">=3.8"
keywords = [
    "python",
    "cli",
    "directory",
    "structures"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities"
]
dependencies = []

[project.scripts]
cliapp = "cliapp.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
